--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
       <div class="contact-info d-flex align-items-center">
         <i class="bi bi-envelope d-flex align-items-center"><a href="mailto:contact@example.com">8dimensikreatif@gmail.com</a></i>
-        <i class="bi bi-phone d-flex align-items-center ms-4"><span>081388649406</span></i>
+        <i class="bi bi-phone d-flex align-items-center ms-4"><span>(021) 8099844</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
         <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
@@ -410,7 +410,7 @@
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
               <img src="assets/img/team/alin1.jpeg" width="1000" height="80" class="img-fluid" alt="">
-              <h4>Nazla Halderman</h4>
+              <h4>Patricia</h4>
               <span>Head Of Company</span>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -489,7 +489,7 @@
                 <i class="bi bi-geo-alt flex-shrink-0"></i>
                 <div>
                   <h4>Location:</h4>
-                  <p>Jl.Raya Jati Asih No 377 Bekasi Selatan</p>
+                  <p>Jalan Raya Condet Lt.1 #5B, RT.5/RW.3, Balekambang, Kec. Kramat jati, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13530</p>
                 </div>
               </div><!-- End Info Item -->
 
@@ -504,8 +504,15 @@
               <div class="info-item d-flex">
                 <i class="bi bi-phone flex-shrink-0"></i>
                 <div>
-                  <h4>Call:</h4>
-                  <p>+62 81388649406</p>
+                  <h4>Kirim pesan whatsapp</h4>
+                  <p>
+                    <a href="https://api.whatsapp.com/send?phone=6281388649406&text=testing" style="color: white;">Klik Disini</a>
+                  </p>
+                  <!-- <p class="">
+                    <a href="https://api.whatsapp.com/send?phone=6281388649406&text=testing">Kirim pesan whatsapp</a>
+
+                  </p> -->
+
                 </div>
               </div><!-- End Info Item -->
 
@@ -521,29 +528,9 @@
 
           </div>
 
-          <div class="col-lg-8">
-            <form action="forms/contact.php" method="post" role="form" class="php-email-form">
-              <div class="row">
-                <div class="col-md-6 form-group">
-                  <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" required>
-                </div>
-                <div class="col-md-6 form-group mt-3 mt-md-0">
-                  <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" required>
-                </div>
-              </div>
-              <div class="form-group mt-3">
-                <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
-              </div>
-              <div class="form-group mt-3">
-                <textarea class="form-control" name="message" rows="7" placeholder="Message" required></textarea>
-              </div>
-              <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
-                <div class="sent-message">Your message has been sent. Thank you!</div>
-              </div>
-              <div class="text-center"><button type="submit">Send Message</button></div>
-            </form>
+          <div class="col-lg-8">           
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.773747436354!2d106.85337631455525!3d-6.293437895445075!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f3c77f55fd97%3A0x60e3e3299f5dd37a!2sPT%20Delapan%20Dimensi%20Kreatif!5e0!3m2!1sid!2sid!4v1665730012134!5m2!1sid!2sid" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+
           </div><!-- End Contact Form -->
 
         </div>
@@ -588,11 +575,9 @@
         <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
           <h4>Contact Us</h4>
           <p>
-            377, Jatiasih Bekasi Selatan <br>
-            Jatiasih,17423<br>
-            Indonesia <br><br>
-            <strong>Phone:</strong> +62 81388649406<br>
-            <strong>Email:</strong> robbenezacklykores@gmail.com<br>
+            Jalan Raya Condet Lt.1 #5B, RT.5/RW.3, Balekambang, Kec. Kramat jati, Kota Jakarta Timur, Daerah Khusus Ibukota Jakarta 13530 <br><br>
+            <strong>Phone:</strong> (021) 8099844<br>
+            <strong>Email:</strong> 8dimensikreatif@gmail.com<br>
           </p>
 
         </div>
