ganti bahasa inggris

--- a/index.html
+++ b/index.html
@@ -213,7 +213,7 @@
                 <i class="bi bi-lightbulb"></i>
               </div>
               <h3>CREATIVE THINKING</h3>
-              <p>Kreativitas adalah nilai pertama & utama Event Organizer (EO) kami dalam mempersiapkan dan menghasilkan kegiatan yang istimewa serta menarik
+              <p>Creativity is the first & foremost value of our Event Organizer (EO) in preparing and producing special and interesting activities
 
               </p>
             </div>
@@ -225,8 +225,8 @@
                 <i class="bi bi-gear"></i>
               </div>
               <h3>PROFESSIONAL & EXPERIENCED</h3>
-              <p>Tim 8 Dimensi Kreatif Event Organizer memiliki jiwa kreatif, solid, inovatif, dan telah berpengalaman selama bertahun-tahun
-                 membantu banyak klien untuk merancang berbagai acara dengan konsep yang baru dan unik sehingga setiap momen tidak akan dilupakan untuk selamanya</p>
+              <p>The 8 Dimensions Creative Event Organizer team has a creative, solid, innovative spirit, and has years of experience helping many clients to design events with new and unique concepts so that every moment will not be forgotten forever.
+              </p>
             </div>
           </div><!-- End Service Item -->
 
@@ -238,7 +238,7 @@
               <h3>INNOVATIVE IDEAS
 
               </h3>
-              <p>Kami mengajak anda untuk berdiskusi berbagai ide yang menarik, manajemen perhitungan biaya, serta detail yang lain untuk membantu anda membuat kegiatan yang spesial.</p>
+              <p>We invite you to discuss various interesting ideas, cost management, and other details to help you create special activities.</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -248,8 +248,8 @@
                 <i class="bi bi-people"></i>
               </div>
               <h3>SOLID TEAMWORK</h3>
-              <p>Kami percaya akan kekuatan sinergi dari seluruh anggota team yang sudah bekerjasama selama bertahun-tahun
-                , yang selalu siap sedia membantu melancarkan kegiatan bazaar, outbound, gathering, launching, virtual event, webinar, seminar, serta kegiatan anda yang lain.</p>
+              <p>We believe in the power of synergy from all team members who have worked together for years, who are always ready to help launch bazaar activities, outbound, gathering, launching, virtual events, webinars, seminars, and your other activities.
+              </p>
             </div>
           </div><!-- End Service Item -->
 
@@ -261,9 +261,7 @@
               <h3>STRESS REDUCTION
 
               </h3>
-              <p>Merancang berbagai kegiatan mulai dari awal persiapan hingga pelaksanaan bukan pekerjaan yang mudah. 
-                Perkenankan kami membantu anda melalui setiap proses kegiatan, sehingga mengurangi stres
-                 dan beban pikiran anda. Anda dapat fokus memikirkan hal strategis lainnya, sambil memberikan pengawasan event</p>
+              <p>Designing various activities from the beginning of preparation to implementation is not an easy job. Let us help you through each activity process, thereby reducing stress and burden on your mind. You can focus on other strategic things, while providing event oversight</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -275,9 +273,7 @@
               <h3>TIME SAVING
 
               </h3>
-              <p>Sebagai Event Organizer yang terus berkembang dan belajar, kami terus melakukan riset atas berbagai elemen event. 
-                Kami bisa membantu anda mencari ide terbaik dan mengimplementasikannya, termasuk vendor-vendor
-                 profesional yang dibutuhkan. Anda bisa menghemat sumber daya (waktu dan tenaga) anda dan bersinergi bersama dengan kami</p>
+              <p>As an Event Organizer who continues to grow and learn, we continue to research various elements of the event. We can help you find the best ideas and implement them, including the required professional vendors. You can save your resources (time and energy) and synergize with us</p>
             </div>
           </div><!-- End Service Item -->
 
@@ -293,7 +289,8 @@
 
         <div class="section-header">
           <h2>Testimonials</h2>
-          <p>Testimonials dari beberapa Client yang sudah bekerja sama bersama kami </p>
+          <p>Testimonials from several clients who have worked with us
+          </p>
         </div>
 
         <div class="slides-3 swiper" data-aos="fade-up" data-aos-delay="100">
@@ -401,7 +398,7 @@
 
         <div class="section-header">
           <h2>Our Team</h2>
-          <p>Team Kami Selalu Cepat Memaksimal kan pekerjaan dan Tepat Waktu dalam Pekerjaan
+          <p>Our team is always fast, maximizing work and on time
           </p>
         </div>
 
@@ -504,9 +501,9 @@
               <div class="info-item d-flex">
                 <i class="bi bi-phone flex-shrink-0"></i>
                 <div>
-                  <h4>Kirim pesan whatsapp</h4>
+                  <h4>Send Message To WhatsApp</h4>
                   <p>
-                    <a href="https://api.whatsapp.com/send?phone=6281388649406&text=testing" style="color: white;">Klik Disini</a>
+                    <a href="https://api.whatsapp.com/send?phone=6281388649406&text=testing" style="color: white;">Click Here</a>
                   </p>
                   <!-- <p class="">
                     <a href="https://api.whatsapp.com/send?phone=6281388649406&text=testing">Kirim pesan whatsapp</a>
