team,testimonial,asset

--- a/index.html
+++ b/index.html
@@ -300,9 +300,9 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/svenson.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <img src="assets/img/testimonials/testie3.jpg" class="me-3 rounded-circle" style="width:90px; height:90px;" alt="">
                     <div>
-                      <h3>Svensson Shearer</h3>
+                      <h3>Sara Wilson</h3>
                       <h4>Ceo &amp; Founder</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -323,9 +323,9 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <img src="assets/img/testimonials/testi2.jpg" class="testimonial-img flex-shrink-0" alt="">
                     <div>
-                      <h3>Sara Wilsson</h3>
+                      <h3>Vincent Laurentius</h3>
                       <h4>Designer</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -345,9 +345,9 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <img src="assets/img/testimonials/testi1.jpg" class="testimonial-img flex-shrink-0" alt="">
                     <div>
-                      <h3>Jena Karlis</h3>
+                      <h3>Angelica Christy</h3>
                       <h4>Store Owner</h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
@@ -367,10 +367,13 @@
               <div class="testimonial-wrap">
                 <div class="testimonial-item">
                   <div class="d-flex align-items-center">
-                    <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img flex-shrink-0" alt="">
+                    <div class="avatar avatar-md">
+
+                      <img src="assets/img/testimonials/testie4.jpg" class="me-3 rounded-circle" style="width:90px; height:90px;" alt="">
+                    </div>
                     <div>
-                      <h3>Matt Brandon</h3>
-                      <h4>Freelancer</h4>
+                      <h3>Caroline Michelle</h3>
+                      <h4>Administrator </h4>
                       <div class="stars">
                         <i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i><i class="bi bi-star-fill"></i>
                       </div>
@@ -406,8 +409,8 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/alin1.jpeg" width="1000" height="80" class="img-fluid" alt="">
-              <h4>Patricia</h4>
+              <img src="assets/img/team/team1.jpg" height="80px" class="img-fluid" alt="">
+              <h4>Steven</h4>
               <span>Head Of Company</span>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -420,8 +423,8 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/foto1.jpg" height="80" class="img-fluid" alt="">
-              <h4>Kathryna</h4>
+              <img src="assets/img/team/team2.jpg" height="80" class="img-fluid" alt="">
+              <h4>James</h4>
               <span>Digital Marketing</span>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
@@ -434,7 +437,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/foto2.jpg" height="80" class="img-fluid" alt="">
+              <img src="assets/img/team/team4.jpg" height="80" class="img-fluid" alt="">
               <h4>Prescilla</h4>
               <span>HRD</span>
               <div class="social">
@@ -448,7 +451,7 @@
 
           <div class="col-xl-3 col-md-6 d-flex" data-aos="fade-up" data-aos-delay="100">
             <div class="member">
-              <img src="assets/img/team/foto4.jpg" height="80" class="img-fluid" alt="">
+              <img src="assets/img/team/team3.jpg" height="80" class="img-fluid" alt="">
               <h4>Clarissa</h4>
               <span>Designer</span>
               <div class="social">
