--- a/index.html
+++ b/index.html
@@ -37,7 +37,6 @@
         <i class="bi bi-phone d-flex align-items-center ms-4"><span>(021) 8099844</span></i>
       </div>
       <div class="social-links d-none d-md-flex align-items-center">
-        <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://www.instagram.com/8dimensi.kreatif/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
       </div>
     </div>
@@ -334,12 +333,14 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid cillum eram malis quorum velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.
+                    We celebrated my daughter's sweet 17 with 8 Dimensi Kreatif and they did not disappoint at all. I would recommend.
+                    Thank you for making my dream wedding came true, 8 Dimensi Kreatif! Everything was perfect. Highly recommended!                   
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
             </div><!-- End testimonial item -->
+
 
             <div class="swiper-slide">
               <div class="testimonial-wrap">
@@ -356,7 +357,11 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.
+                    Two thumbs up for your service.
+                    Make my wedding dream come true.
+                    All crew very helpful, very organized
+                    So that the event runs smoothly.
+                    Highly recommended for your big day
                     <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
@@ -381,8 +386,7 @@
                   </div>
                   <p>
                     <i class="bi bi-quote quote-icon-left"></i>
-                    Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat minim velit minim dolor enim duis veniam ipsum anim magna sunt elit fore quem dolore.
-                    <i class="bi bi-quote quote-icon-right"></i>
+                    Thanks for 8 Dimensi Kreatif, You guys did great job for our wedding. Your services were very great and helpful, probably I`m fussy customer(always make sure anything, change/cancel things) but you still calm down, take care, open minded and listen to your customer. Everything was going well and over all it`s not disappointed. All the best for 8 Dimensi Kreatif                   <i class="bi bi-quote quote-icon-right"></i>
                   </p>
                 </div>
               </div>
@@ -549,13 +553,10 @@
           <a href="index.html" class="logo d-flex align-items-center">
             <span>8DKV</span>
           </a>
-          <p>Menjadi tim yang sangat profesional, kami tahu bagaimana bekerja di bawah tekanan dan menyesuaikan diri 
-            dengan keadaan apa pun dengan tingkat kompetensi dan kesungguhan tertinggi dalam setiap proyek yang kami hasilkan.</p>
+          <p>Being a highly professional team, we know how to work under
+             pressure and adapt to any situation with the highest level of competence and sincerity in every project we produce..</p>
           <div class="social-links d-flex mt-4">
-            <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
-            <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-            <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
-            <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
+            <a href="https://www.instagram.com/8dimensi.kreatif/?hl=en" class="instagram"><i class="bi bi-instagram"></i></a>
           </div>
         </div>
 
